@@ -30,19 +30,19 @@ sys.path = ['/usr/share/reportbug'] + sys.path
 import getopt
 import re
 
-import reportbug
-from reportbug_exceptions import (
+from reportbuglib import reportbug
+from reportbuglib.reportbug_exceptions import (
     UINotImportable,
     NoPackage, NoBugs, NoReport, NoNetwork,
     )
-import debianbts
-import urlutils
+from reportbuglib import debianbts
+from reportbuglib import urlutils
 
 try:
-    import reportbug_ui_newt as ui
+    from reportbuglib import reportbug_ui_newt as ui
     ui_mode = 'newt'
 except:
-    import reportbug_ui_text as ui
+    from reportbuglib import reportbug_ui_text as ui
     ui_mode = 'text'
 
 VERSION = "querybts ##VERSION##"
@@ -172,7 +172,8 @@ def main():
         global ui, ui_mode
         iface = 'reportbug_ui_%(interface)s' % vars()
         try:
-            ui = __import__(iface)
+            lib_package = __import__('reportbuglib', fromlist=[iface])
+            ui = getattr(lib_package, iface)
             ui_mode = interface
         except UINotImportable, msg:
             ui.long_message('*** Unable to import %s interface: %s '
