@@ -38,25 +38,30 @@ import rfc822
 import gettext
 import textwrap
 
-import reportbug
-from reportbug import MODE_EXPERT, MODE_ADVANCED, MODE_NOVICE, MODE_STANDARD
-from reportbug import VERSION, COPYRIGHT
-from rbtempfile import TempFile, tempfile_prefix, cleanup_temp_file
-from reportbug_exceptions import (
+from reportbuglib import reportbug
+from reportbuglib.reportbug import (
+    VERSION, COPYRIGHT,
+    MODE_EXPERT, MODE_ADVANCED, MODE_NOVICE, MODE_STANDARD,
+    )
+from reportbuglib.rbtempfile import (
+    TempFile,
+    tempfile_prefix,
+    cleanup_temp_file,
+    )
+from reportbuglib.reportbug_exceptions import (
     UINotImportable, UINotImplemented,
     NoNetwork, NoPackage, NoBugs, NoReport,
     )
-import reportbug_submit
-import checkversions
-import debianbts
-import checkbuildd
+from reportbuglib import reportbug_submit
+from reportbuglib import checkversions
+from reportbuglib import debianbts
+from reportbuglib import checkbuildd
+from reportbuglib import reportbug_ui_text as ui
 
 try:
     gettext.install('reportbug')
 except IOError:
     pass
-
-import reportbug_ui_text as ui
 
 # Magic constant time
 MIN_USER_ID = 250
@@ -823,7 +828,8 @@ def main():
 
         iface = 'reportbug_ui_%(interface)s' % vars()
         try:
-            ui = __import__(iface)
+            lib_package = __import__('reportbuglib', fromlist=[iface])
+            ui = getattr(lib_package, iface)
         except UINotImportable, msg:
             ui.long_message('*** Unable to import %s interface: %s '
                             'Falling back to text interface.\n',
